tests/cases/memory/ok/zone-header-metadata.ari
fn main() -> i64 {
  var zone = zone::create(64);

  let first = zone::alloc(ref mut zone, 3, 1);
  let first_zone = zone::allocation_zone(first) as u64;

  let second = zone::alloc<i64>(ref mut zone);
  *second = 11;
  let second_bytes = second as ptr u8;
  let second_zone = zone::allocation_zone(second_bytes) as u64;
  let same_zone = if first_zone == second_zone { 10 } else { 1000 };
  let stored = *second;

  zone::reset(ref mut zone);
  let third = zone::alloc(ref mut zone, 5, 1);
  let third_zone = zone::allocation_zone(third) as u64;
  let after_reset_same_zone = if first_zone == third_zone { 20 } else { 2000 };

  zone::destroy(zone);
  return same_zone + after_reset_same_zone + stored;
}
