tests/cases/memory/errors/zone-temp-outer-binding-escape.ari
fn main() -> i64 {
  var leaked: ptr i64 = null;
  {
    var scratch = zone::temp(64);
    let item = zone::new<i64>(ref mut scratch, 5);
    leaked = item;
  }
  return 0;
}
